Formatting of events, including new read more link. Change to order on events landing page. Language of dates on events.

--- a/web/themes/ipu/assets/css/ipu.style.css
+++ b/web/themes/ipu/assets/css/ipu.style.css
@@ -757,7 +757,7 @@ pre code {
 .page__footer .viewfield--view__sub_content .region-inner .views-row,
 .viewfield--view__sub_content .node-article .group-related > div .field__item .views-element-container > div .views-row,
 .node-article .group-related > div .field__item .viewfield--view__sub_content .views-element-container > div .views-row, .node-article .group-related > div .field__item .views-element-container > div .views-row, .col-lg-3, .taxonomy-list-article .views-row, .view-publications.view-display-id-page_1 .views-inner .views-row, .col-lg-2, .col-lg-1, .col-md,
-.col-md-auto, .col-md-12, .node-172 .group-header .landing-page__body, .col-md-11, .col-md-10, .col-md-9, .col-md-8, .ultimenu__flyout .region-inner .block--views-block--theme-list-block-1-5, .col-md-7, .col-md-6, .ultimenu__item-3 .ultimenu__flyout .block, .field__item__paragraph__highlights .paragraph--type--highlights .field__item:nth-child(-n+2), .section-page-subpages-section .row .views-row, .section-page-subpages-section .ultimenu__flyout .region-inner .views-row, .ultimenu__flyout .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .taxonomy-list-article .views-rows-wrapper .views-row, .taxonomy-list-article .section-page-subpages-section .views-rows-wrapper .views-row, .section-page-subpages-section .section-page__field-committee-members.field-committee-members .field__items .views-row, .section-page__field-committee-members.field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .field-committee-members .field__items .views-row, .field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-body-and-data .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-body-and-data .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-header-inner .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-header-inner .views-row, .section-page-subpages-section .view-publications.view-display-id-page_1 .views-inner .views-row, .view-publications.view-display-id-page_1 .section-page-subpages-section .views-inner .views-row, .section-page-subpages-section .field__item__paragraph__highlights .paragraph--type--highlights .highlights__field-node .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .section-page-subpages-section .highlights__field-node .views-row, .section-page-subpages-section .carousel-item .node--view-mode-slide.bs-2col .views-row, .carousel-item .section-page-subpages-section .node--view-mode-slide.bs-2col .views-row, .section-page-subpages-section .page__footer .region-inner .views-row, .page__footer .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .node-article .group-related > div .field__item .views-element-container > div .views-row, .node-article .group-related > div .field__item .section-page-subpages-section .views-element-container > div .views-row,
+.col-md-auto, .col-md-12, .node-172 .group-header .landing-page__body, .col-md-11, .col-md-10, .col-md-9, .col-md-8, .ultimenu__flyout .region-inner .block--views-block--theme-list-block-1-5, .col-md-7, .col-md-6, .field__item__paragraph__highlights .paragraph--type--highlights .field__item:nth-child(-n+2), .section-page-subpages-section .row .views-row, .section-page-subpages-section .ultimenu__flyout .region-inner .views-row, .ultimenu__flyout .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .taxonomy-list-article .views-rows-wrapper .views-row, .taxonomy-list-article .section-page-subpages-section .views-rows-wrapper .views-row, .section-page-subpages-section .section-page__field-committee-members.field-committee-members .field__items .views-row, .section-page__field-committee-members.field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .field-committee-members .field__items .views-row, .field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-body-and-data .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-body-and-data .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-header-inner .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-header-inner .views-row, .section-page-subpages-section .view-publications.view-display-id-page_1 .views-inner .views-row, .view-publications.view-display-id-page_1 .section-page-subpages-section .views-inner .views-row, .section-page-subpages-section .field__item__paragraph__highlights .paragraph--type--highlights .highlights__field-node .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .section-page-subpages-section .highlights__field-node .views-row, .section-page-subpages-section .carousel-item .node--view-mode-slide.bs-2col .views-row, .carousel-item .section-page-subpages-section .node--view-mode-slide.bs-2col .views-row, .section-page-subpages-section .page__footer .region-inner .views-row, .page__footer .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .node-article .group-related > div .field__item .views-element-container > div .views-row, .node-article .group-related > div .field__item .section-page-subpages-section .views-element-container > div .views-row,
 .viewfield--view__sub_content .row .views-row,
 .viewfield--view__sub_content .ultimenu__flyout .region-inner .views-row,
 .ultimenu__flyout .viewfield--view__sub_content .region-inner .views-row,
@@ -780,7 +780,7 @@ pre code {
 .viewfield--view__sub_content .page__footer .region-inner .views-row,
 .page__footer .viewfield--view__sub_content .region-inner .views-row,
 .viewfield--view__sub_content .node-article .group-related > div .field__item .views-element-container > div .views-row,
-.node-article .group-related > div .field__item .viewfield--view__sub_content .views-element-container > div .views-row, .col-md-5, .col-md-4, .ultimenu__item-2 .ultimenu__flyout .block, .ultimenu__item-1 .ultimenu__flyout > .region-inner > .block, .ultimenu__flyout .region-inner .block--ipucontentblock, .taxonomy-list-article .views-row, .field-committee-members .field__items > .field__item, .in-the-section .views-row, .view-publications.view-display-id-page_1 .views-inner .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .field-content-section .paragraph--type--sections .field--type-viewfield .views-row, .col-md-3, .section-page__field-committee-members.field-committee-members .field__items > .field__item, .page__footer .region-inner > .block, .col-md-2, .col-md-1, .col-sm,
+.node-article .group-related > div .field__item .viewfield--view__sub_content .views-element-container > div .views-row, .col-md-5, .col-md-4, .ultimenu__item-3 .ultimenu__flyout .block, .ultimenu__item-2 .ultimenu__flyout .block, .ultimenu__item-1 .ultimenu__flyout > .region-inner > .block, .ultimenu__flyout .region-inner .block--ipucontentblock, .taxonomy-list-article .views-row, .field-committee-members .field__items > .field__item, .in-the-section .views-row, .view-publications.view-display-id-page_1 .views-inner .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .field-content-section .paragraph--type--sections .field--type-viewfield .views-row, .col-md-3, .section-page__field-committee-members.field-committee-members .field__items > .field__item, .page__footer .region-inner > .block, .col-md-2, .col-md-1, .col-sm,
 .col-sm-auto, .col-sm-12, .col-sm-11, .col-sm-10, .col-sm-9, .col-sm-8, .node-landing_page:not(.node-172) .group-header .landing-page__body, .col-sm-7, .col-sm-6, .taxonomy-list-article .views-row, .view-publications.view-display-id-page_1 .views-inner .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .col-sm-5, .col-sm-4, .node-landing_page:not(.node-172) .group-header .group-body-and-data .landing-page__field-data-points-for-theme, .col-sm-3, .col-sm-2, .col-sm-1, .col,
 .col-auto, .col-12, .node-landing_page:not(.node-172) .group-header .landing-page__node-title.theme-landing-page .field-node-title-wrapper .field-node-title-inner, .basic-page__field-related-documents .field__item .related-documents__field-external-link, .col-11, .col-10, .col-9, .col-8, .col-7, .col-6, .col-5, .col-4, .col-3, .col-2, .col-1 {
   position: relative;
@@ -1174,7 +1174,7 @@ pre code {
     max-width: 25%;
   }
 
-  .col-md-4, .ultimenu__item-2 .ultimenu__flyout .block, .ultimenu__item-1 .ultimenu__flyout > .region-inner > .block, .ultimenu__flyout .region-inner .block--ipucontentblock, .taxonomy-list-article .views-row, .field-committee-members .field__items > .field__item, .in-the-section .views-row, .view-publications.view-display-id-page_1 .views-inner .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .field-content-section .paragraph--type--sections .field--type-viewfield .views-row {
+  .col-md-4, .ultimenu__item-3 .ultimenu__flyout .block, .ultimenu__item-2 .ultimenu__flyout .block, .ultimenu__item-1 .ultimenu__flyout > .region-inner > .block, .ultimenu__flyout .region-inner .block--ipucontentblock, .taxonomy-list-article .views-row, .field-committee-members .field__items > .field__item, .in-the-section .views-row, .view-publications.view-display-id-page_1 .views-inner .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .field__item, .field-content-section .paragraph--type--sections .field--type-viewfield .views-row {
     flex: 0 0 33.3333333333%;
     max-width: 33.3333333333%;
   }
@@ -1184,7 +1184,7 @@ pre code {
     max-width: 41.6666666667%;
   }
 
-  .col-md-6, .ultimenu__item-3 .ultimenu__flyout .block, .field__item__paragraph__highlights .paragraph--type--highlights .field__item:nth-child(-n+2), .section-page-subpages-section .row .views-row, .section-page-subpages-section .ultimenu__flyout .region-inner .views-row, .ultimenu__flyout .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .taxonomy-list-article .views-rows-wrapper .views-row, .taxonomy-list-article .section-page-subpages-section .views-rows-wrapper .views-row, .section-page-subpages-section .field-committee-members .field__items .views-row, .field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-body-and-data .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-body-and-data .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-header-inner .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-header-inner .views-row, .section-page-subpages-section .view-publications.view-display-id-page_1 .views-inner .views-row, .view-publications.view-display-id-page_1 .section-page-subpages-section .views-inner .views-row, .section-page-subpages-section .field__item__paragraph__highlights .paragraph--type--highlights .highlights__field-node .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .section-page-subpages-section .highlights__field-node .views-row, .section-page-subpages-section .carousel-item .node--view-mode-slide.bs-2col .views-row, .carousel-item .section-page-subpages-section .node--view-mode-slide.bs-2col .views-row, .section-page-subpages-section .page__footer .region-inner .views-row, .page__footer .section-page-subpages-section .region-inner .views-row,
+  .col-md-6, .field__item__paragraph__highlights .paragraph--type--highlights .field__item:nth-child(-n+2), .section-page-subpages-section .row .views-row, .section-page-subpages-section .ultimenu__flyout .region-inner .views-row, .ultimenu__flyout .section-page-subpages-section .region-inner .views-row, .section-page-subpages-section .taxonomy-list-article .views-rows-wrapper .views-row, .taxonomy-list-article .section-page-subpages-section .views-rows-wrapper .views-row, .section-page-subpages-section .field-committee-members .field__items .views-row, .field-committee-members .section-page-subpages-section .field__items .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-body-and-data .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-body-and-data .views-row, .section-page-subpages-section .node-landing_page:not(.node-172) .group-header .group-header-inner .views-row, .node-landing_page:not(.node-172) .group-header .section-page-subpages-section .group-header-inner .views-row, .section-page-subpages-section .view-publications.view-display-id-page_1 .views-inner .views-row, .view-publications.view-display-id-page_1 .section-page-subpages-section .views-inner .views-row, .section-page-subpages-section .field__item__paragraph__highlights .paragraph--type--highlights .highlights__field-node .views-row, .field__item__paragraph__highlights .paragraph--type--highlights .section-page-subpages-section .highlights__field-node .views-row, .section-page-subpages-section .carousel-item .node--view-mode-slide.bs-2col .views-row, .carousel-item .section-page-subpages-section .node--view-mode-slide.bs-2col .views-row, .section-page-subpages-section .page__footer .region-inner .views-row, .page__footer .section-page-subpages-section .region-inner .views-row,
 .viewfield--view__sub_content .row .views-row,
 .viewfield--view__sub_content .ultimenu__flyout .region-inner .views-row,
 .ultimenu__flyout .viewfield--view__sub_content .region-inner .views-row,
@@ -21753,7 +21753,7 @@ https://www.drupal.org/project/drupal/issues/2929888
 .ipu-map-country-select-form .button {
   text-transform: uppercase;
   margin: 0px;
-  border-radius: 4px;
+  border-radius: 0 4px 4px 0;
   padding: 2px 6px;
 }
 
@@ -21770,7 +21770,7 @@ https://www.drupal.org/project/drupal/issues/2929888
 
 /* Generic layout */
 .field-content-section .paragraph--type--sections .field--type-viewfield {
-  /* Fixed events? */
+  /* Fixed events */
 }
 .field-content-section .paragraph--type--sections .field--type-viewfield .views-element-container > div {
   /*@extend .row;*/
@@ -25883,9 +25883,13 @@ a.more-data-parline, .article__node-link a,
   margin-bottom: 0;
 }
 .viewfield--view__events.viewfield--view__events__block .ipu-event__field-summary, .viewfield--view__events.viewfield--view__events__block_upcoming .ipu-event__field-summary, .viewfield--view__events.viewfield--view__events__block_past .ipu-event__field-summary, .viewfield--view__events.viewfield--view__events__assembly_listing .ipu-event__field-summary, .viewfield--view__events.viewfield--view__events__multiple_ids .ipu-event__field-summary {
-  font-size: 0.875rem;
-  line-height: 1.1rem;
+  font-size: 1rem;
+  line-height: 1.4rem;
+  padding-top: 10px;
   padding-bottom: 10px;
+}
+.viewfield--view__events.viewfield--view__events__block .ipu-event__node-link, .viewfield--view__events.viewfield--view__events__block_upcoming .ipu-event__node-link, .viewfield--view__events.viewfield--view__events__block_past .ipu-event__node-link, .viewfield--view__events.viewfield--view__events__assembly_listing .ipu-event__node-link, .viewfield--view__events.viewfield--view__events__multiple_ids .ipu-event__node-link {
+  margin: 5px 0 10px 0;
 }
 .viewfield--view__events .field-event-type {
   font-size: 0.6rem;
@@ -25974,7 +25978,7 @@ a.more-data-parline, .article__node-link a,
   font-variant: normal;
   font-weight: 900;
   line-height: 1;
-  padding: 4px 0;
+  padding: 2px 0;
   content: "\F0AC";
   margin-right: 4px;
 }
@@ -25988,7 +25992,7 @@ a.more-data-parline, .article__node-link a,
 }
 .basic-page__field-related-documents .document__body {
   font-size: 0.875rem;
-  line-height: 1rem;
+  line-height: 1.2rem;
   margin-left: 16px;
 }
 .basic-page__field-related-documents .field__item .related-documents__field-external-link {
@@ -26321,7 +26325,7 @@ a.more-data-parline, .article__node-link a,
   font-size: 0.875rem;
 }
 .paragraph--type--call-to-action:hover {
-  background-color: #e98300;
+  background-color: #00a8b4;
 }
 .paragraph--type--call-to-action a {
   font-size: 1.2rem;
@@ -26330,6 +26334,7 @@ a.more-data-parline, .article__node-link a,
 }
 .paragraph--type--call-to-action a:hover {
   text-decoration: none;
+  color: #ffffff;
 }
 .paragraph--type--call-to-action a:after {
   font-family: "Font Awesome 5 Free", sans-serif;
@@ -26345,6 +26350,9 @@ a.more-data-parline, .article__node-link a,
 }
 .paragraph--type--call-to-action .call-to-action__field-description {
   color: #747678;
+}
+.paragraph--type--call-to-action:hover a, .paragraph--type--call-to-action:hover .call-to-action__field-description {
+  color: #ffffff;
 }
 
 .node-90 .col-md-5 .section-page__field-media-image {
@@ -26796,6 +26804,9 @@ ol.breadcrumb {
   color: #0066a1;
   font-weight: 300;
   letter-spacing: 0;
+}
+#main-nav .ultimenu__flyout .ipu-menu-list ul.nav li a:hover {
+  color: #ffffff;
 }
 
 /*@include media-breakpoint-down(md) {
