--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -441,7 +441,7 @@ span::before {
 .ipu-map-country-select-form .button {
   text-transform: uppercase;
   margin: 0px;
-  border-radius: 4px;
+  border-radius: 0 4px 4px 0;
   padding: 2px 6px;
 }
 
@@ -466,7 +466,7 @@ span::before {
       .views-row {
         @extend .col-md-4;
       }
-      /* Fixed events? */
+      /* Fixed events */
     }
   }
 }
@@ -1510,9 +1510,13 @@ a.btn {
       margin-bottom: 0;
     }
     .ipu-event__field-summary {
-      font-size: $font-size-sm;
-      line-height: 1.1rem;
+      font-size: $font-size-base;
+      line-height: 1.4rem;
+      padding-top: 10px;
       padding-bottom: 10px;
+    }
+    .ipu-event__node-link {
+      margin: 5px 0 10px 0;
     }
   }
   .field-event-type {
@@ -1614,7 +1618,7 @@ a.btn {
     font-variant: normal;
     font-weight: 900;
     line-height: 1;
-    padding: 4px 0;
+    padding: 2px 0;
     content: '\f0ac';
     margin-right: 4px;
   }
@@ -1636,7 +1640,7 @@ a.btn {
   }
   .document__body {
     font-size: $font-size-sm;
-    line-height: 1rem;
+    line-height: 1.2rem;
     margin-left: 16px;
   }
 
@@ -2037,7 +2041,7 @@ a.btn {
   padding: 8px;
   font-size: $font-size-sm;
   &:hover {
-    background-color: $tertiary;
+    background-color: $ipu-teal;
   }
   a {
     font-size: $font-size-md;
@@ -2046,6 +2050,7 @@ a.btn {
   }
   a:hover {
     text-decoration: none;
+    color: $ipu-white
   }
   a:after {
     font-family: "Font Awesome 5 Free", sans-serif;
@@ -2062,6 +2067,11 @@ a.btn {
   .call-to-action__field-description {
     color: $ipu-grey;
   }
+  &:hover {
+    a, .call-to-action__field-description {
+      color: $ipu-white;
+    }
+   }
 }
 
 // Hide image on structure page as it's used as a main image too
