--- a/web/themes/ipu/src/sass/block/_block.scss
+++ b/web/themes/ipu/src/sass/block/_block.scss
@@ -447,11 +447,14 @@ span::before {
 
 /* Subpages section on section pages */
 .section-page-subpages-section {
-  background-color: color("ipu-very-light-grey");
+  //background-color: color("ipu-very-light-grey");
+  background-color: $light;
   padding: 20px 0;
   margin: 10px -10px 0 -10px; /* Push to edge of container-fluid without row */
   .field__label {
     @extend h2;
+    font-weight: $font-weight-light !important;
+    border-bottom: 1px solid $secondary;
     margin: 30px 0;
   }
 }
@@ -1454,22 +1457,38 @@ a.btn {
 .viewfield--view__events {
   // Upcoming and prev
 
-  .form-item-field-event-type-target-id {
+  .views-exposed-form  {
     background-color: $light;
     padding: 10px;
     display: flex;
-    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 10px;
+
+    .form-group {
+      display: inline-block;
+      margin-left: 10px;
+      margin-bottom: 0;
+    }
     label {
-      font-size: $font-size-xs;
-      margin: 0;
+      font-size: $font-size-sm;
+      font-weight: $font-weight-normal;
     }
     select {
       width: auto;
-      margin-left: 10px;
       font-size: $font-size-xs;
     }
+    input.form-submit {
+      @extend .btn-sm;
+      margin-left: 10px;
+    }
+
   }
 
+  &.viewfield--view__events__block {
+    .views-exposed-form {
+      margin-top: -20px;
+    }
+  }
   &.viewfield--view__events__block,
   &.viewfield--view__events__block_upcoming,
   &.viewfield--view__events__block_past,
@@ -1491,9 +1510,11 @@ a.btn {
       border-bottom: 1px solid $secondary;
       padding-top: 40px;
     }
-    .ipu-event__field-location:before {
-      content: ' ';
-      margin-right: 10px;
+    .ipu-event__dates + .ipu-event__field-location {
+      &:before {
+        content: ' ';
+        margin-right: 10px;
+      }
     }
     .ipu-event__dates, .ipu-event__field-location {
       display: inline-block;
