--- a/web/modules/custom/ipu_tweaks/templates/ipu-tweaks-data-points.html.twig
+++ b/web/modules/custom/ipu_tweaks/templates/ipu-tweaks-data-points.html.twig
@@ -12,20 +12,20 @@
  */
 #}
 <div class="ipu-tweaks-data-points">
-    <h2 class="sr-only">Data points:</h2>
+    <h2 class="sr-only">{{ 'Data points'|t }}:</h2>
     <div class="container-fluid">
         <div class="row">
             <div class="col-md-6 col-lg-3">
                 <div class="card h-100 card-members">
                     <div class="term-icon term-icon-19 card-header">
-                        <span class="data-point-title">IPU member parliaments</span>
+                        <span class="data-point-title">{{ 'IPU member parliaments'|t }}</span>
                     </div>
                     <div class="card-body d-flex flex-column stats">
                         <div class="d-flex align-items-center">
                             <div><div class="stats-circle">{{ stats.members.count }}</div></div>
-                            <div class="stats-content">countries are members of the IPU</div>
+                            <div class="stats-content">{{ 'countries are members of the IPU'|t }}</div>
                         </div>
-                        <div class="mt-auto"><a class="stats-more-link" href="{{ stats.members.link  }}">See our member parliaments</a></div>
+                        <div class="mt-auto"><a class="stats-more-link" href="{{ stats.members.link  }}">{{ 'See our member parliaments'|t }}</a></div>
                     </div>
                 </div>
             </div>
